--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
     <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <meta
       name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no, user-scalable=no, viewport-fit=cover"
-    />
-    <title>VK Mini App Boilerplate</title>
+      content="width=device-width, initial-scale=1, shrink-to-fit=no, user-scalable=no, viewport-fit=cover" />
+    <title>Tetris</title>
   </head>
   <body>
     <div id="root"></div>
